[project]
name = "rosa-cluster-artifacts"
version = "1.0.0"
description = "ROSA Cluster Data Collection and Health Check Tools"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
markers = [
    "instances: EC2 instance tests",
    "vpc: VPC configuration tests",
    "network: Network configuration tests",
    "security_groups: Security group tests",
    "storage: EBS storage tests",
    "load_balancers: Load balancer tests",
    "route53: Route53 DNS tests",
    "iam: IAM role and policy tests",
    "iam_roles: Individual IAM role validation tests",
    "operator_roles: ROSA operator role tests",
    "iam_permissions: IAM permission validation tests",
    "installation: Cluster installation tests",
    "aws_resources: General AWS resource tests",
    "controlplane: Control plane / master node tests",
    "node: Worker and infra node tests",
    "loadbalancer: Load balancer security tests",
    "egress: Egress traffic tests",
    "icmp: ICMP protocol tests",
    "ignition: OpenShift Ignition configuration tests",
    "bootstrap: Bootstrap process tests",
    "operators: Cluster operators tests",
    "etcd: etcd quorum and cluster tests",
    "gcp: GCP OpenShift cluster tests",
    "quotas: GCP project quota tests",
    "apis: GCP API enablement tests",
    "firewall: GCP firewall rules tests",
    "dns: GCP DNS configuration tests",
    "wif: Workload Identity Federation tests",
    "psc: Private Service Connect tests",
]
